2025.113:
	- Add mstraceseg3_pack() to individually packet MS3TraceSeg entries.
	- Add lmp_systemtime() to return current system time as nstime_t.
	- Add MS3Record_INITIALIZER for efficient heap initialization of an MS3Record.
	- Change the default initialization for MS3Record.starttime to NSTUNSET.
	Previously this was a value of 0, corresponding to 1970-01-01T00:00:00Z.
	- msr3_print(): do not force high resolution printing of sample rate.
	- Add MSF_PPUPDATETIME flag to store update time (as nstime_t) at MS3TraceSeg.prvtptr.
	- Add support for generating SourceIDs from SEED codes with (illegal) spaces.
	- Add ms_sid2nslc_n() with destination buffer sizes for memory safety.
	- Deprecate ms_sid2nslc(), supports max buffers needed for SEED codes.

2024.165: 3.1.3
	- Use sequence number from extra headers (/FDSN/Sequence) if present when writing format v2.

2024.148: 3.1.2
	- Update yyjson to v0.9.0.
	- Simplify mstl3_addmsr_recordptr() a bit.

2024.146:
	- Replace ms_dabs() with macro to use system fabs(), document as deprecated.
	- Add CRC values to diagnostic message when header values does not match calculated.

2024.137:
	- Add msr3_nsperiod() to calculate the sample period in nanoseconds.
	- Add tests for msr3 utility functions.

2024.106:
	- When writing v2 derive the quality code from the publication version when the
	extra-header "/FDSN/DataQuality" is not present.  Use quality indicator 'D' when
	the publication version cannot be mapped, e.g. > 4.

2024.024: 3.1.1
	- Change library compatibility version in Makefile to MAJOR.1.0, as this is now
	incompatible with the x.0.0 releases.

2024.024: 3.1.0
	BREAKING CHANGES, data structure and an API changes:
	- `MS3Record.encoding` now int16_t instead of int8_t.
	- `MS3Record.datalength` now uint32_t instead of uint16_t (change in 3.0.18).
	- `MS3Record.datasize` and `MS3TraceSeg.datasize` now uint64_t instead of size_t.
	- `ms3_detect()` now returns int64_t instead of int.