@@ -143,14 +143,15 @@ msr3_duplicate (const MS3Record *msr, int8_t datadup)
   if (msr->extralength > 0 && msr->extra)
   {
     /* Allocate memory for new FSDH structure */
-    if ((dupmsr->extra = (char *)libmseed_memory.malloc (msr->extralength)) == NULL)
+    if ((dupmsr->extra = (char *)libmseed_memory.malloc (msr->extralength + 1)) == NULL)
     {
       ms_log (2, "Error allocating memory\n");
       msr3_free (&dupmsr);
       return NULL;
     }
 
-    memcpy (dupmsr->extra, msr->extra, msr->extralength);
+    /* Copy extra headers and terminating NULL */
+    memcpy (dupmsr->extra, msr->extra, msr->extralength + 1);
 
     if (dupmsr->extra)
       dupmsr->extralength = msr->extralength;
